# neo_FFT3D

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: Dependencies.cmake  Targets.cmake  Tests.cmake  Version.cmake
debian/: changelog  control  copyright  rules
fft3dfilter/: CMakeLists.txt  FFT3DEngine.cpp  FFT3DEngine.h  FFT3DFilter.cpp  FFT3DFilter.h  FFT3DFilter.hpp  avs_interface.cpp  common.h  fft3dfilter_c.cpp  fft3dfilter_sse.cpp  fftwlite.h  helper.cpp  helper.h
fft3dfilter/code_impl/: Apply.cpp  ApplyPattern.cpp  ApplyPatternDegrid.cpp  ApplyWiener.cpp  ApplyWienerDegrid.cpp  ApplyWienerDegrid_SSE2.cpp  ApplyWiener_SSE2.cpp  Apply_SSE2.cpp  Kalman.cpp  Kalman_SSE2.cpp  Sharpen.cpp  Sharpen_SSE2.cpp  code_impl.h  code_impl_C.h  code_impl_SSE2.h
include/dualsynth/: avs_wrapper.hpp  ds_common.hpp  ds_filter.hpp  ds_format.hpp  ds_frame.hpp  ds_videoinfo.hpp  vs_wrapper.hpp
src/: CMakeLists.txt  FFT3DEngine.cpp  FFT3DEngine.h  FFT3DFilter.h  FFT3DFilter.hpp  avs_interface.cpp  buffer.cpp  buffer.h  cache.hpp  common.h  cpuid.cpp  dualsynth_compat.hpp  fft3d.hpp  fft3d_common.h  fft3d_engine.h  fftwlite.h  functions.h  helper.cpp  helper.h  neo_fft3d.hpp  version.rc.in  vs_interface.cpp
src/code_impl/: Apply.cpp  Apply_AVX.cpp  Apply_AVX512.cpp  Apply_SSE2.cpp  Kalman.cpp  Kalman_AVX.cpp  Kalman_AVX512.cpp  Kalman_SSE2.cpp  Sharpen.cpp  Sharpen_AVX.cpp  Sharpen_AVX512.cpp  Sharpen_SSE2.cpp  code_impl.h  code_impl_AVX.h  code_impl_AVX512.h  code_impl_C.h  code_impl_SSE2.h
src/common/: aligned_vector.hpp  fft3d_views.hpp
src/core/cpu/: apply_hwy.cpp  core_hwy.h  cpu_dispatch.cpp  cpu_dispatch.hpp  kalman_hwy.cpp  sharpen_hwy.cpp
src/engine/: cpu_filter_backend.cpp  engine_params.hpp  engine_workspace.cpp  engine_workspace.hpp  fft3d_engine.cpp  fft3d_engine.hpp  filter_backend.hpp  frame_buffer.cpp  frame_buffer.hpp  frame_cover.cpp  frame_views.hpp  overlap_transform.cpp  pattern_analysis.cpp  pattern_analysis.hpp
src/fft/: dynamic_library.cpp  dynamic_library.hpp  fft_backend.hpp  fftw_abi.hpp  fftw_backend.cpp  fftw_lock.hpp  fftw_runtime.cpp  fftw_runtime.hpp  pocketfft_backend.cpp
src/plugin/: fft3d_filter.cpp  fft3d_filter.hpp  plugin_entry.cpp
src/wrapper/: avs_filter.hpp  vs_filter.hpp
tests/baseline/: baseline_runner.py  test_baseline_runner.py
tests/baseline/cases/: compat.json  smoke.json
tests/baseline/golden/: compat.json  smoke.json
tests/tools/: avs_frame_dump.cpp
tests/unit/: c_apply_null_slots_test.cpp  cache_test.cpp  filter_backend_test.cpp  frame_buffer_test.cpp
wrapper/: avs_wrapper.hpp  common.hpp  ds_format.hpp  ds_frame.hpp  ds_videoinfo.hpp  filter.hpp  vs_wrapper.hpp
